fix: line wrapping for long strings on mobile for posts page

--- a/src/resources/sass/_custom.scss
+++ b/src/resources/sass/_custom.scss
@@ -7,6 +7,7 @@
 // For posts page (feed)
 .post-container-content-feed {
   padding: 10px 25px;
+  overflow-wrap: break-word;
 }
 
 .post-container-feed {
